@@ -124,8 +124,8 @@ INPUT_FILTER           =
 FILTER_PATTERNS        =
 FILTER_SOURCE_FILES    = NO
 INPUT_ENCODING         = ISO-8859-1
-CITE_BIB_FILES 	       = @abs_srcdir@/doc/doc 		\
-			 @abs_srcdir@/doc/olena
+CITE_BIB_FILES 	       = @abs_top_srcdir@/doc/doc.bib 		\
+			 @abs_top_srcdir@/doc/olena.bib
 LATEX_BIB_STYLE	       = plain
 #---------------------------------------------------------------------------
 # configuration options related to source browsing
