@@ -1,3 +1,10 @@
+2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Fix path to data.
+
+	* doc/Doxyfile.in,
+	* doc/Makefile.am: Here.
+
 2011-12-12  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	Change path to .bib files.
